# sgio

./: .augmentignore  .buildinfo  .cursorignore  .gitignore  5.0  AGENTS.md  BUILD_EXECUTABLE.md  LICENSE  README.md  build_and_publish.bat  build_executable.bat  build_executable.py  dev_note.md  genindex.html  index.html  log.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sgio.spec  sitemap.xml
.augment/rules/: project.md  test.md
.claude/: settings.json  settings.local.json
.cursor/rules/: package-overview.mdc
.github/workflows/: build-executables.yml  build_sphinx_doc.yml
_downloads/13e377901b36658e069d4324ff57367f/: read_vabs_input.py
_downloads/16cd65cece51690485fbac97b081f651/: sg2_airfoil.inp
_downloads/4110691056d25c20c1d34f11f2568cdc/: sg31t_hex20_sc21.sg.sn
_downloads/4205675d6f54fbde2b2de57953a29c38/: cs_box_t_vabs41.sg.ELE
_downloads/7b74a72c0cf0e50110053b7ccc648b47/: cs_box_t_vabs41.sg
_downloads/8984255990db5b415e4a0e847f4830e1/: sg33_cube_tetra4_min_gmsh41.msh
_sources/: index.rst.txt
_static/: logo.xcf
backlog/: logging.html
dev-notes/: README.md  critical-issue-01-mutable-default-arguments.md  critical-issue-02-inconsistent-return-type.md  critical-issue-03-missing-error-handling.md  critical-issues-summary.md  design-analysis-state-statecase.md  major-issue-04-typo-in-documentation.md  major-issue-05-inconsistent-documentation.md  major-issue-06-redundant-code.md  major-issue-07-non-pythonic-comparisons.md  major-issue-08-unclear-logic-addstate.md  major-issues-summary.md
developer/: mesh_number.html
docs/: Makefile  make.bat  requirements.txt
examples/: README.md  abaqus_sg_3d.html  check_cell_ordering_gmsh.py  convert_abaqus_cs_to_vabs.html  convert_gmsh_to_sc.html  convert_gmsh_to_sc.py  convert_mesh_data_vabs2gmsh.py  convert_vabs_to_gmsh.html  index.html  load_cauchy_material_from_json.html  material_symmetries_example.py  parameter_aliases_example.py  plot_cs.html  plot_cs.py  read_sc_output_d.py  read_sc_output_state.html  read_vabs_input.html  read_vabs_input.py  read_vabs_output_d.html  read_vabs_output_d.py  read_vabs_output_h.html  read_vabs_output_h.py
guide/: abaqus_cs.html  convert.html  gmsh.html  index.html  io.html  io_model.html  io_state.html  plot.html  sg.html  testing.html
ref/: beam.html  general.html  index.html  io.html  mesh.html  model.html  plateshell.html  plot.html  sg.html  solid.html
scripts/: EXECUTABLE_BUILD_SUMMARY.md  Makefile  build_and_publish.bat  build_executable.sh
sgio/: __init__.py  __main__.py  _exceptions.py  _global.py  app.py  beam.py  execu.py  io.py  mesh_io.py  requirements.txt  sg.py  sgio.spec  shell.py  solid.py
sgio/core/: merge.py  (+9 more)
test/: plate400s4r.inp  run.py  sg1d_line5.sg  sg2d_tri3_vabs.sg  sg2d_tri6_sc.sg
tests/: README.md  conftest.py  cyl_bck_s4r_160x80.inp  laminate_1.sg  log.txt  note.md  pytest.ini  run.py  sg2d_tri6_sc.inp  sg2d_tri6_sc.msh  shellsections.inp  test_build_sg_1d.py  test_cli_convert.py  test_convert.py  test_convert_to_vabs.py  test_init.py  test_inprw.py  test_io.py  test_io_sc_out_state_d.py  test_io_vabs_in.py  test_io_vabs_in_glb.py  test_io_vabs_out_model.py  test_io_vabs_out_state_d.py  test_io_vabs_out_state_f.py  test_plot.py  test_read_output_node_strain_stress.py  test_temp.py
(+941 files in other folders)
